# AIPad

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  PROJECT_STATUS.md  README.md  codex_roadmap.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
src/: App.svelte  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs
src/lib/components/calendar/: CalendarView.svelte
src/lib/components/dashboard/: AnalyticsView.svelte  DashboardView.svelte
src/lib/components/dump/: CogDumpView.svelte
src/lib/components/editor/: NotesView.svelte
src/lib/components/layout/: Sidebar.svelte  StatusBar.svelte
src/lib/components/productivity/: EisenhowerView.svelte  TodosView.svelte
src/lib/components/settings/: SettingsView.svelte
src/lib/components/terminal/: TerminalView.svelte
src/lib/components/vault/: VaultView.svelte
src/lib/services/: db.ts  encryption.ts  ollama.ts
src/lib/stores/: calendar.ts  navigation.ts  notes.ts  ollama.ts  pomodoro.ts  theme.ts  todos.ts  vault.ts
src/lib/types/: index.ts
src/styles/: global.css
src/styles/themes/: arcade.css  cyberpunk.css  dark.css  matrix.css  neon.css  retro.css  synthwave.css
